--- a/style.css
+++ b/style.css
@@ -8,11 +8,15 @@
 *{
     box-sizing: border-box;
 }
-body, html {
+html{
+    scroll-behavior: smooth;
+}
+body {
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
-    font-family: 'Courier New', Courier, monospace;
+	/* overflow: hidden; */
+    
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .cursor_circle{
@@ -36,15 +40,15 @@ body, html {
 .is-active::after{
     content: '';
     position: absolute;
-    border: .7px solid rgba(110, 0, 0, 0.916);
+    border: .5px solid rgba(182, 0, 0, 0.852);
     background-color: rgba(198, 0, 0, 0.5);
     border-radius: 50%;
     transform: scale(1.5);
 }
 
 .cursor_dot {
-    width: 10px;
-    height: 10px;
+    width: 8px;
+    height: 8px;
     background-color: rgba(106, 0, 28, 0.728);
     mix-blend-mode: difference;
     border-radius: 50%;
@@ -53,4 +57,18 @@ body, html {
     top: 0px;
     pointer-events: none;
     z-index: 2025;
+}
+
+.is-hide {
+    opacity: 0;
+}
+
+.container{
+    margin: 10px
+}
+
+header, footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
