--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ html{
 }
 body {
 	margin: 0;
-	padding: 0;    
+	padding: 0;
+    font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
